--- a/web/themes/custom/theme_sdd/templates/page/page--front.html.twig
+++ b/web/themes/custom/theme_sdd/templates/page/page--front.html.twig
@@ -12,7 +12,121 @@
 
 
 
- 
+{# 
+  <section class="py-[96px]">
+    <div class="container mx-auto px-4">
+      <div class="title">
+        <h6 class="mb-7 flex items-center gap-2 font-bold text-orange">
+          <img src="/{{ active_theme_path() }}/assets/images/headline.svg" alt />
+          <span> Latest News </span>
+        </h6>
+
+        <div class="flex items-center justify-between">
+          <div class="max-w-[470px]">
+            <h2 class="mb-10 text-4xl">
+              Stay informed with our latest updates and important alerts
+            </h2>
+          </div>
+          <a href
+            class="group/btn relative inline-flex h-[51px] rounded-full border border-[#D4D4D8] bg-[#F9FAFB] py-3 pe-[65px] ps-7 text-[#6A7282] transition-all hover:border-orange hover:bg-[#FFF3E9] hover:text-orange">
+            <span class=" ">View all</span>
+
+            <span
+              class="absolute -end-1 top-0 flex h-[50px] w-[53px] items-center justify-center rounded-full border border-[#D4D4D8] bg-white transition-all group-hover/btn:border-orange group-hover/btn:bg-orange">
+              <i class="fa-regular fa-arrow-right text-xs text-[#99A1AF] group-hover/btn:text-white"></i>
+            </span>
+          </a>
+        </div>
+      </div>
+
+      <div class="flex gap-10">
+        <div class="flex-4/7">
+          <div class="flex h-full flex-col items-start justify-between border-s border-orange ps-7">
+            <div>
+              <div class="image mb-11">
+                <img src="/{{ active_theme_path() }}/assets/images/Rectangle39406.png" class="h-[310px] w-full max-w-full rounded-sm object-cover"
+                  alt />
+              </div>
+
+              <div class="mb-11">
+                <div class="mb-5 text-sm text-[#99A1AF]">March 5th, 2025</div>
+                <h3 class="text-2xl">
+                  Sharjah Digital Department launches new corporate identity
+                </h3>
+              </div>
+            </div>
+
+            <a href
+              class="group/btn relative inline-flex h-[51px] rounded-full border border-orange bg-[#FFF3E9] py-3 pe-[65px] ps-7 text-orange transition-all">
+              <span class=" ">View all</span>
+
+              <span
+                class="absolute -end-1 top-0 flex h-[50px] w-[53px] items-center justify-center rounded-full border border-orange bg-orange transition-all">
+                <i class="fa-regular fa-arrow-right text-xs text-white"></i>
+              </span>
+            </a>
+          </div>
+        </div>
+        <div class="flex-2/7">
+          <div class="flex h-full flex-col items-start justify-between border-s border-[#D4D4D8] ps-7">
+            <div>
+              <div class="image mb-11">
+                <img src="/{{ active_theme_path() }}/assets/images/Rectangle39406.png" class="h-[190px] w-full max-w-full rounded-sm object-cover"
+                  alt />
+              </div>
+
+              <div class="mb-11">
+                <div class="mb-5 text-sm text-[#99A1AF]">March 5th, 2025</div>
+                <h3 class="text-2xl">
+                  Sharjah Digital Department launches new corporate identity
+                </h3>
+              </div>
+            </div>
+
+            <a href
+              class="group/btn relative inline-flex h-[51px] rounded-full border border-[#D4D4D8] bg-[#F9FAFB] py-3 pe-[65px] ps-7 text-[#6A7282] transition-all hover:border-orange hover:bg-[#FFF3E9] hover:text-orange">
+              <span class=" ">View all</span>
+
+              <span
+                class="absolute -end-1 top-0 flex h-[50px] w-[53px] items-center justify-center rounded-full border border-[#D4D4D8] bg-white transition-all group-hover/btn:border-orange group-hover/btn:bg-orange">
+                <i class="fa-regular fa-arrow-right text-xs text-[#99A1AF] group-hover/btn:text-white"></i>
+              </span>
+            </a>
+          </div>
+        </div>
+
+        <div class="flex-2/7">
+          <div class="flex h-full flex-col items-start justify-between border-s border-[#D4D4D8] ps-7">
+            <div>
+              <div class="image mb-11">
+                <img src="/{{ active_theme_path() }}/assets/images/Rectangle39406.png" class="h-[190px] w-full max-w-full rounded-sm object-cover"
+                  alt />
+              </div>
+
+              <div class="mb-11">
+                <div class="mb-5 text-sm text-[#99A1AF]">March 5th, 2025</div>
+                <h3 class="text-2xl">
+                  Sharjah Digital Department launches new corporate identity
+                </h3>
+              </div>
+            </div>
+
+            <a href
+              class="group/btn relative inline-flex h-[51px] rounded-full border border-[#D4D4D8] bg-[#F9FAFB] py-3 pe-[65px] ps-7 text-[#6A7282] transition-all hover:border-orange hover:bg-[#FFF3E9] hover:text-orange">
+              <span class=" ">View all</span>
+
+              <span
+                class="absolute -end-1 top-0 flex h-[50px] w-[53px] items-center justify-center rounded-full border border-[#D4D4D8] bg-white transition-all group-hover/btn:border-orange group-hover/btn:bg-orange">
+                <i class="fa-regular fa-arrow-right text-xs text-[#99A1AF] group-hover/btn:text-white"></i>
+              </span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section> #}
+
+{#  
   <section id="sticky-section" class="sticky z-10 bg-[#F3F4F6]  py-5 hidden md:block    border-b-2 border-[#E5E7EB]">
     <div class="container mx-auto px-4">
       <div class="flex justify-between items-center">
@@ -47,7 +161,7 @@
 
       </div>
     </div>
-  </section>
+  </section> #}
 
  
 
