--- a/web/themes/custom/theme_sdd/templates/page/page.html.twig
+++ b/web/themes/custom/theme_sdd/templates/page/page.html.twig
@@ -53,14 +53,14 @@
 	{{ page.header }}
 {% endif %}
 
-{% if page.banner %}
-	{{ page.banner }}
+{% if page.inner_banner %}
+	{{ page.inner_banner }}
 {% endif %}
 
 
-{% if page.breadcrumb %}
+{# {% if page.breadcrumb %}
 	{{ page.breadcrumb }}
-{% endif %}
+{% endif %} #}
 
 {% if page.messages %}
 	{{ page.messages }}
