--- a/web/modules/custom/sharjah_dd/templates/front-latest-news.html.twig
+++ b/web/modules/custom/sharjah_dd/templates/front-latest-news.html.twig
@@ -1,33 +1,31 @@
-  <section class="py-[96px]">
-    <div class="container mx-auto px-4">
-      <div class="title">
-        <h6 class="mb-7 flex items-center gap-2 font-bold text-orange">
-          <img src="/{{ active_theme_path() }}/assets/images/headline.svg" alt />
-          <span> {{ items.highlight }} </span>
-        </h6>
+<section class="md:py-[96px] py-16">
+	<div class="container mx-auto px-4">
+		<div class="title">
+			<h6 class="mb-7 flex items-center gap-2 font-bold text-orange">
+				<img src="/{{ active_theme_path() }}/aassets/images/headline.svg" alt/>
+				<span>
+					{{ items.highlight }}
+				</span>
+			</h6>
 
-        <div class="flex items-center justify-between">
-          <div class="max-w-[470px]">
-            <h2 class="mb-10 text-4xl">
-             {{ items.description|raw }}
-            </h2>
-          </div>
-          <a href
-            class="group/btn relative inline-flex h-[51px] rounded-full border border-[#D4D4D8] bg-[#F9FAFB] py-3 pe-[65px] ps-7 text-[#6A7282] transition-all hover:border-orange hover:bg-[#FFF3E9] hover:text-orange">
-            <span class=" ">{{ "View all"|t }}</span>
+			<div class="flex md:items-center mb-16 md:m-0 items-start justify-between flex-col md:flex-row">
+				<div class="max-w-[470px]">
+					<h2 class="md:mb-10 md:text-4xl mb-6  text-2xl">
+						{{ items.description|render|striptags|trim }}
+					</h2>
+				</div>
+				<a href class="group/btn relative inline-flex h-[51px] rounded-full border border-[#D4D4D8] bg-[#F9FAFB] py-3 pe-[65px] ps-7 text-[#6A7282] transition-all hover:border-orange hover:bg-[#FFF3E9] hover:text-orange">
+					<span class=" ">{{ "View all"|t }}</span>
 
-            <span
-              class="absolute -end-1 top-0 flex h-[50px] w-[53px] items-center justify-center rounded-full border border-[#D4D4D8] bg-white transition-all group-hover/btn:border-orange group-hover/btn:bg-orange">
-              <i class="fa-regular fa-arrow-right text-xs text-[#99A1AF] group-hover/btn:text-white"></i>
-            </span>
-          </a>
-        </div>
-      </div>
+					<span class="absolute -end-1 top-0 flex h-[50px] w-[53px] items-center justify-center rounded-full border border-[#D4D4D8] bg-white transition-all group-hover/btn:border-orange group-hover/btn:bg-orange">
+						<i class="fa-regular fa-arrow-right text-xs text-[#99A1AF] group-hover/btn:text-white"></i>
+					</span>
+				</a>
+			</div>
+		</div>
+		<!--      render view start-->
+		{{ drupal_view('news', 'front') }}
+		<!--      render view end-->
 
-<!--      render view start-->
-        {{ drupal_view('news', 'front') }}
-<!--      render view end-->
-   
-      
-    </div>
-  </section>
+	</div>
+</section>
