--- a/web/themes/custom/theme_sdd/templates/node/node--services--teaser.html.twig
+++ b/web/themes/custom/theme_sdd/templates/node/node--services--teaser.html.twig
@@ -1,20 +1,17 @@
-       <a href="{{ url }}" class="">
-          <div class="mb-6 flex items-center justify-between">
-            <h5>{{ short_label }}</h5>
-            <i class="fa-thin {{ content.field_font_icon|render|striptags|trim|raw }} text-5xl text-orange"></i>
-          </div>
-          <div class="text-sm text-[#99A1AF]">
-          {{ content.body|render|striptags|trim|raw}}
-          </div>
+       <a href="{{ url }}"
+            class="rounded-xl bg-white p-9 group/service hover:border-orange border border-transparent transition-all">
+            <div class="mb-6 text-xl flex items-center justify-between">
+              <h5>{{ short_label }}</h5>
+              <i
+                class="fa-thin {{ content.field_font_icon|render|striptags|trim|raw }} text-5xl text-orange  group-hover/service:!font-bold transition-all "></i>
+            </div>
+            <p class="text-sm text-[#99A1AF]">
+             {{ content.body|render|striptags|trim|raw}}
+            </p>
 
-
-          <div class="mt-6 flex items-center gap-2">
-            <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M8.96875 0.36377C9.32422 0.36377 9.625 0.664551 9.625 1.02002V7.58252C9.625 7.96533 9.32422 8.23877 8.96875 8.23877C8.58594 8.23877 8.3125 7.96533 8.3125 7.58252V2.60596L1.99609 8.92236C1.72266 9.1958 1.3125 9.1958 1.06641 8.92236C0.792969 8.67627 0.792969 8.26611 1.06641 8.02002L7.38281 1.70361H2.40625C2.02344 1.70361 1.75 1.40283 1.75 1.04736C1.75 0.664551 2.02344 0.391113 2.40625 0.391113H8.96875V0.36377Z"
-                fill="#99A1AF" />
-            </svg>
-        
-            <span class="text-sm text-[#6A7282]">{{ "Learn more"|t }}</span>
-          </div>
-        </a>
+            <div
+              class="mt-6 flex items-center group-hover/service:text-orange  text-[#6A7282] gap-2">
+              <i class="fa-regular fa-arrow-up-right text-xs "></i>
+              <span class="text-sm ">{{ "Learn more"|t }}</span>
+            </div>
+          </a>
