--- a/web/themes/custom/theme_sdd/templates/node/node--view--news--front.html.twig
+++ b/web/themes/custom/theme_sdd/templates/node/node--view--news--front.html.twig
@@ -73,19 +73,35 @@
   'flex-col',
   'items-start',
   'justify-between',
-  'border-s',
+  'md:border-s',
+  'border-b',
+  'md:border-b-0',
+  'pb-6',
+  'md:pb-0',
   is_first ? 'border-orange' : 'border-[#D4D4D8]',
-  'ps-7'
+  'md:ps-7'
 ]|join(' ') %}
 
-{% set is_last = loop.last %}
 
-{% set flex_ratio_class = is_first ? 'flex-4/7' : 'flex-2/7' %}
+
+{% set flex_ratio_class = is_first ? 'lg:flex-4/7 flex-1/3' : 'lg:flex-2/7  flex-1/3' %}
 {% set image_height_class = is_first ? 'h-[310px]' : 'h-[190px]' %}
+{% set view_link = is_first ? 
+'group/btn relative hidden md:inline-flex  h-[51px] rounded-full border border-orange bg-[#FFF3E9] py-3 pe-[65px] ps-7 text-orange transition-all' :
+ 'hidden md:inline-flex group/btn relative  h-[51px] rounded-full border border-[#D4D4D8] bg-[#F9FAFB] py-3 pe-[65px] ps-7 text-[#6A7282] transition-all hover:border-orange hover:bg-[#FFF3E9] hover:text-orange' %}
+
+{% set circle_round = is_first 
+? 'absolute -end-1 top-0 flex h-[50px] w-[53px] items-center justify-center rounded-full border border-orange bg-orange transition-all' 
+: 'absolute -end-1 top-0 flex h-[50px] w-[53px] items-center justify-center rounded-full border border-[#D4D4D8] bg-white transition-all group-hover/btn:border-orange group-hover/btn:bg-orange' %}
+
+{% set arrow = is_first 
+? 'fa-regular fa-arrow-right text-xs text-white' 
+: 'fa-regular fa-arrow-right text-xs text-[#99A1AF] group-hover/btn:text-white' %}
+
 
 <div class="{{ flex_ratio_class }}">
   <div class="{{ container_classes }}">
-    <div>
+    <div class="{{ is_first ? 'w-full': ''}}">
       <div class="image mb-11">
         {# Render field_image safely without extra tags #}
         <img src="{{ content.field_image|render|striptags|trim|raw }}" 
@@ -102,11 +118,11 @@
     </div>
 
     <a href="{{ url }}" 
-       class="group/btn relative inline-flex h-[51px] rounded-full border border-[#D4D4D8] bg-[#F9FAFB] py-3 pe-[65px] ps-7 text-[#6A7282] transition-all hover:border-orange hover:bg-[#FFF3E9] hover:text-orange">
+       class="{{ view_link }}">
       <span>{{ 'View all'|t }}</span>
 
-      <span class="absolute -end-1 top-0 flex h-[50px] w-[53px] items-center justify-center rounded-full border border-[#D4D4D8] bg-white transition-all group-hover/btn:border-orange group-hover/btn:bg-orange">
-        <i class="fa-regular fa-arrow-right text-xs text-[#99A1AF] group-hover/btn:text-white"></i>
+      <span class="{{ circle_round }}">
+        <i class="{{ arrow }}"></i>
       </span>
     </a>
   </div>
