--- a/web/themes/custom/theme_sdd/templates/views/views-exposed-form--services--digital-platform-block.html.twig
+++ b/web/themes/custom/theme_sdd/templates/views/views-exposed-form--services--digital-platform-block.html.twig
@@ -23,11 +23,12 @@
 	 'flex',
 	  'items-center',
 	   'justify-between',
-	    'filter'
+	    'filter',
+		'hidden',
 	] %}
 
-<div {{attributes.addClass(classes)}} id="services">
-	{{ form|without('actions','keys') }}
+<div {{attributes.addClass(classes)}} id="services" >
+	{{ form|without('actions','keys','service_type') }}
 	{% set keys = form.keys %}
 	{% set keys = keys|merge({
   '#attributes': keys['#attributes']|merge({
@@ -38,9 +39,14 @@
 
 		{{ keys }}
 	</div>
+	{{ form.service_type}}
+
 	<div class="submit-reset hidden ">
 		{{ form.actions }}
 	</div>
-
-
 </div>
+
+
+<h2 class="mb-10 text-4xl">
+{{ 'Digital Platforms'|t }} 
+</h2>
