--- a/web/themes/custom/theme_sdd/assets/css/input.css
+++ b/web/themes/custom/theme_sdd/assets/css/input.css
@@ -247,3 +247,9 @@ button {
 footer .open i {
   transform: rotate(180deg);
 }
+
+
+.swiper-pagination-progressbar .swiper-pagination-progressbar-fill {
+  background:#F27B21;
+ 
+}
