--- a/web/themes/custom/theme_sdd/templates/block/block.html.twig
+++ b/web/themes/custom/theme_sdd/templates/block/block.html.twig
@@ -30,11 +30,12 @@
 	{{ title_prefix }}
 	{% if label %}
 		{# <h2{{ title_attributes }}>{{ label }}</h2> #}
-   <div class="container mx-auto px-4">
+    {# <section class="py-16"> #}
+   
 		<h2 class="mb-8 text-4xl">
 			{{ label }}
 		</h2>
-</div>          
+</div>   
 	{% endif %}
 	{{ title_suffix }}
 	{% block content %}
