--- a/web/modules/custom/sharjah_dd/templates/header.html.twig
+++ b/web/modules/custom/sharjah_dd/templates/header.html.twig
@@ -13,11 +13,11 @@
           </button>
 
           <div>
-            {# <img src="{{ items.left_logo_url }}" class="max-w-full" alt /> #}
+            <img src="{{ items.left_logo_url }}" class="max-w-full" alt />
           </div>
 
           <div class="hidden lg:block">
-            {# <img src="{{ items.right_logo_url }}" class="max-w-full" alt /> #}
+            <img src="{{ items.right_logo_url }}" class="max-w-full" alt />
           </div>
 
           <button class="search lg:hidden">
