--- a/web/modules/custom/sharjah_dd/templates/home-banner.html.twig
+++ b/web/modules/custom/sharjah_dd/templates/home-banner.html.twig
@@ -20,7 +20,7 @@
               fill="white" />
           </svg>
 
-          <span>Scroll</span>
+          <span>{{ "Scroll"|t }}</span>
         </button>
 
         <div class="min-w-0">
