--- a/web/modules/custom/sharjah_dd/templates/front-services.html.twig
+++ b/web/modules/custom/sharjah_dd/templates/front-services.html.twig
@@ -15,18 +15,17 @@
               </p>
           </div>
         </div> 
+
 <!--        render service view start -->
-        
-{{ drupal_view('services', 'list') }}
-
-
+  {{ drupal_view('services', 'list') }}
 <!--        render service view end-->
-        
-        
+              
  <div class="mt-[56px] text-center">
           <a href
             class="group/btn relative inline-flex h-[51px] rounded-full border border-[#D4D4D8] bg-[#F9FAFB] py-3 pe-[65px] ps-7 text-[#6A7282] transition-all hover:border-orange hover:bg-[#FFF3E9] hover:text-orange">
-            <span class=" ">View all</span>
+            <span class=" ">
+            {{ "View all"|t }}
+            </span>
 
             <span
               class="absolute -end-1 top-0 flex h-[50px] w-[53px] items-center justify-center rounded-full border border-[#D4D4D8] bg-white transition-all group-hover/btn:border-orange group-hover/btn:bg-orange">
