--- a/web/themes/custom/theme_sdd/templates/node/node--media-images--teaser.html.twig
+++ b/web/themes/custom/theme_sdd/templates/node/node--media-images--teaser.html.twig
@@ -19,3 +19,20 @@
 		<span>{{ node.getCreatedTime()|format_date('olivero_medium') }}</span>
 	</div>
 </div>
+
+<a href="{{ url }}" class="group/btn  relative h-[51px] rounded-full border border-[#D4D4D8] bg-[#F9FAFB] py-3 pe-[65px]
+				                 ps-7 text-[#6A7282] transition-all
+				                                 group-hover/news:border-orange group-hover/news:bg-[#FFF3E9] group-hover/news:text-orange
+		
+				                 hover:border-orange hover:bg-[#FFF3E9] hover:text-orange">
+	<span class=" ">{{ "View all"|t }}</span>
+
+	<span class="absolute -end-1 top-0 flex h-[50px] w-[53px] items-center justify-center rounded-full border
+						                  border-[#D4D4D8] bg-white transition-all
+						                  group-hover/news:border-orange group-hover/news:bg-orange
+						                  group-hover/btn:border-orange group-hover/btn:bg-orange">
+		<i class="fa-regular fa-arrow-right text-xs text-[#99A1AF]
+						                    group-hover/news:text-white
+						                     group-hover/btn:text-white"></i>
+	</span>
+</a>
